fixed scrollbar bug for last row

--- a/src/components/player/playerMain.scss
+++ b/src/components/player/playerMain.scss
@@ -65,8 +65,3 @@ td:not(.player) {
   }
 
 }
-
-.empty-row {
-  padding-top: 10px;
-  height: 56px;
-}
